# ghost-board

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  RALPH_LOOP.sh  README.md  anchrix_concept.txt  docker-compose.yml  ghost_board_final_prd.md  main.py  progress.txt  pyproject.toml  requirements.txt  setup.sh  setup_mirofish.sh
.github/workflows/: lint.yml  test.yml
agents/: __init__.py  base.py  ceo.py  cfo.py  cmo.py  cto.py  legal.py
coordination/: __init__.py  events.py  state.py  trace.py
dashboard/: boardroom.html  globe.html  index.html
dashboard-app/: package-lock.json  package.json  vite.config.js
dashboard-app/src/: App.css  App.jsx  api.js  demoData.js  (+1 more)
dashboard-react/: package-lock.json  package.json
db/: __init__.py  models.py  storage.py
demo/: DEMO_SCRIPT.md  DEMO_VIDEO_SCRIPT.md  PRESENTATION.md  anchrix_concept.txt  cached_trace.json  coforge_concept.txt  edtech_concept.txt  healthtech_concept.txt  saas_concept.txt
landing/: index.html
landing-react/: package-lock.json  package.json
scripts/: capture_agents_working.py  capture_demo.py  deploy.sh  verify_all.py  verify_screenshots.py
server/: __init__.py  app.py  database.py  models.py  persistence.py  websocket_manager.py
simulation/: __init__.py  analyzer.py  engine.py  hybrid_engine.py  lightweight_agents.py  mirofish_bridge.py  personas.py
tests/: conftest.py  test_agents.py  test_api.py  test_cli.py  test_dashboard_e2e.py  test_db.py  test_e2e.py  test_events.py  test_hybrid.py  test_outputs.py  test_simulation.py
(+72 files in other folders)
